# Cinema

./: pyproject.toml
karaoke/: settings.py  urls.py  wsgi.py
templates/rooms/: _navbar.html  price.html  room_schedule.html  rooms_home.html  upcoming.html
